--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>Olá mundo do GIT</h1>
+    <h1>Olá mundo do GIT e do GitHub</h1>
     <script src="js/index.js"></script>
 
 </body>
